# diagnostic

./: .gitignore  CMakeLists.txt  DiagnosticGUI.kdev4  README.md  install.sh
.kdev4/: DiagnosticGUI.kdev4
extras/: BuildingLaptop.txt  NDS_Crank_Arm.dxf  NDS_Crank_Arm.gl  dxf2gl.txt
extras/TestData/: data.txt  kalmanFilter  kalmanFilter.cpp
src/: arrow-right.xpm  crank-canvas.cpp  crank-canvas.h  gui-helper.cpp  gui-helper.h  main.cpp  main.h  thread.cpp  thread.h  uuid.h  view-refresh.xpm
